--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ SERVER_PORT=3000
 # 아래 ktkim_shopping 과 1234는 개인 계정 설정값으로 바꾸어야 사용할 수 있습니다.
 MONGODB_URL="mongodb+srv://root:elice9market@freshmarket.nim3i.mongodb.net/?retryWrites=true&w=majority"
 
-; JWT_SECRET_KEY="ad5kafl91AGak@192vk0LQPVIckvD#a@o!d3/dao1qw%ez"
+JWT_SECRET_KEY="ad5kafl91AGak@192vk0LQPVIckvD#a@o!d3/dao1qw%ez"
 
+IMG_KEY = "652256526f52427e3c31f4fdc681f6b3"
